# uq-tools-rust

./: Cargo.toml  LICENSE
src/cpu-usage-once/: main.rs
src/exec-waybar/: main.rs
src/frequency/: main.rs
src/ram/: main.rs
src/temperature/: main.rs  sensors.rs
